[FIX] web, web_editor: ace widget partially hidden in read-only mode
Before this commit, the ´.ace_gutter´ overlapped the beginning
of the ace widget text content.

It only happens in read-only mode if it's a one-liner content.

Note that ´aria-hidden´ attribute is not set on BS modal. So,
it seems useless to remove it. Maybe a relicate of Bootstrap 3.

Steps to reproduce:
In debug mode,
- Open Settings
- Technical
- Scheduled Actions
- Open any

closes odoo/odoo#109380

X-original-commit: 462af946e308fa291114f162ba2c8d31b4cb34b0

--- a/addons/web/static/src/legacy/scss/ui.scss
+++ b/addons/web/static/src/legacy/scss/ui.scss
@@ -24,10 +24,6 @@
     }
 }
 
-[aria-hidden="true"], [aria-hidden="1"] {
-    display: none!important;
-}
-
 .dropdown-toggle {
     white-space: nowrap;
 
